# outRank_Rust_Backend

./: Cargo.toml  get_canister_data.json  testdata.txt
src/: canisterlist.rs  main.rs
