[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-cdk = "0.7.0"
tokio = { version = "1", features = ["full"] }
ic-types = "0.6.0"
serde_json = "1.0.64"
serde_cbor = "0.11.1"
candid = "0.9.5"
serde = "1.0"
num-format = "0.4.4"